# personal-mcp-core

./: .gitignore  AGENTS.md  AI_GUIDE.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
data/: README.md  events.jsonl
docs/: AI_ROLE_POLICY.md  AI_WORKFLOW.md  CODEX_RUNBOOK.md  PLAYBOOK.md  README.md  RUNBOOK_BASELINE.md  WORKER_POLICY.md  adapters.md  ai-notification-contract-v1.md  architecture.md  candidate-api-v1.md  cleanup-architecture.md  cleanup-pipeline.md  daily-input-mode-contract-v1.md  daily-input-ux-mvp.md  data-directory.md  design-principles.md  deterministic-toolchain-baseline.md  development-docs-inventory.md  doc-drift-detection.md  domain-extension-policy.md  eng-domain-concept.md  eng-ingest-impl.md  event-contract-v1.md  git-branch-cleanup-cheatsheet.md  heatmap-density-audit-2026-03-12.md  heatmap-density-audit.md  heatmap-metric-derivation-spec.md  heatmap-scale-decision.md  heatmap-state-density-spec.md  heatmap-temporal-aggregation-spec.md  import-layering-dependency-constraints.md  issue-213-daily-log-input-frictions.md  issue-79-proposal-review.md  kind-taxonomy-v1.md  migration.md  mvp-contract-decisions.md  storage-unification-plan.md  unified-input-ui-187.md  usage-monitor-research.md  (+3 more)
scripts/: claude-notify  codex_git_guard.py  codex_launch.py  codex_notify.py  issue145_smoke.sh  issue_dag.py  notify
tests/: conftest.py  test_candidates.py  test_claude_notify_wrapper.py  test_cli.py  test_codex_git_guard.py  test_codex_launch.py  test_codex_notify.py  test_daily_summary.py  test_event.py  test_github_ingest.py  test_github_sync.py  test_heatmap_buckets.py  test_heatmap_summary.py  test_issue_dag.py  test_jsonl.py  test_log_form.py  test_notify_discord_adapter.py  test_notify_wrapper.py  test_poe2.py  test_poe2_client_watcher.py  test_resolve_data_dir.py  test_storage_boundary.py  test_storage_migration.py  test_worker_claim.py  (+1 more)
(+69 files in other folders)
