[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-mcp-core"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fugashi[unidic-lite]>=1.5,<2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.3",
    "pytest>=8.0",
]

[project.scripts]
personal-mcp = "personal_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
personal_mcp = ["AI_GUIDE.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
# Source of truth for Ruff line length used by both lint and format.
# Keep CI/local commands free of CLI overrides so they read this file.
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E: pycodestyle errors, F: pyflakes — minimal set, no docstring/type enforcement
# E501 remains enabled unless it is explicitly added to ignore here.
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"
